--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             padding: 30px 20px;
             background: transparent;
             border-radius: 10px;
-            margin-top: 200px;
+            margin-top: 100px;
             animation: fadeIn 1.5s ease-out 1.2s both;
             position: relative;
             z-index: 2;
@@ -2065,7 +2065,7 @@
         const firebaseConfig = {
             apiKey: "AIzaSyA7ov2Oy2nTrygrwlSxevTTLOO3CQp1Gy0",
             authDomain: "undangan-digital-e8182.firebaseapp.com",
-            databaseURL: "https://undangan-digital-e8182-default-rtdb.asia-southeast1.firebasedatabase.app",
+            databaseURL: "https://undangan-digital-e8182-default-rtdb.firebaseio.com",
             projectId: "undangan-digital-e8182",
             storageBucket: "undangan-digital-e8182.firebasestorage.app",
             messagingSenderId: "751584444577",
@@ -2490,4 +2490,5 @@
     </script>
 </body>
 </html>
+
 
