--- a/index.html
+++ b/index.html
@@ -1284,17 +1284,9 @@
         
         /* Notifikasi */
         .notification {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: #4caf50; /* hijau untuk sukses */
-            color: #fff;
-            padding: 10px 15px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-            z-index: 9999;
-            font-size: 14px;
-            opacity: 0.95;
+            display: none !important;
+            visibility: hidden !important;
+            opacity: 0 !important;
         }
         
         .notification.show {
@@ -2492,6 +2484,7 @@
     </script>
 </body>
 </html>
+
 
 
 
