--- a/index.html
+++ b/index.html
@@ -251,14 +251,14 @@
             padding: 30px 20px;
             background: transparent;
             border-radius: 20px;
-            margin-top: 90px;
+            margin-top: 97px;
             animation: fadeIn 1.5s ease-out 1.2s both;
             position: relative;
             z-index: 2;
         }
         
         .greeting-text {
-            font-size: 1.1rem;
+            font-size: 0.7rem;
             margin-bottom: 25px;
             color: #ffffff;
         }
@@ -313,8 +313,8 @@
         }
 
         .footer-note {
-            font-size: 0.9rem;
-            color: #000000;
+            font-size: 0.7rem;
+            color: rgb(255, 255, 255);
             margin-top: 15px;
             animation: fadeIn 1.5s ease-out 2.1s both;
             position: relative;
@@ -2484,8 +2484,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
